--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -322,10 +322,41 @@ header {
   border-radius: 10px;
 }
 
-.search-section h2 {
-  font-family: Dosis, sans-serif;
-  font-weight: lighter;
-  font-size: 2rem;
+.search-section {
+  h2 {
+    font-family: Dosis, sans-serif;
+    font-weight: lighter;
+    font-size: 2rem;
+  }
+
+  .search-field {
+    display: flex;
+    height: 44px;
+
+    label {
+      height: 100%;
+      background-color: $light-grey;
+      display: flex;
+      align-items: center;
+      padding: 0 15px;
+      border-radius: 10px 0 0 10px;
+
+      p {
+        font-family: Inter, sans-serif;
+        font-size: 1rem;
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+    input {
+      outline: none;
+      border: none;
+      padding: 0 15px;
+      font-size: 1rem;
+      border-radius: 0 10px 10px 0;
+    }
+  }
 }
 
 .search-result {
