--- a/app/src/assets/css/index.css
+++ b/app/src/assets/css/index.css
@@ -312,6 +312,8 @@ header nav a h3 {
 
 .search-result {
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 .search-result table {
   width: 100%;
@@ -335,6 +337,72 @@ header nav a h3 {
 }
 .search-result table tr td {
   width: max-content;
+}
+.search-result .error {
+  text-align: center;
+}
+.search-result .search-error {
+  color: #ff0000;
+}
+.search-result .loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.search-result .lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.search-result .lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #9BE7FF;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.search-result .lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.search-result .lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.search-result .lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.search-result .lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
