--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -5,6 +5,7 @@ $light-grey: #F0F3F5;
 $orange: #FF8811;
 $viewport-top-margin: 10%;
 
+@import "loader";
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400&display=swap');
 
 :root {
@@ -223,11 +224,103 @@ header {
   flex-direction: column;
 }
 
-.atelier, .search-section {
+.atelier {
+  height: 32.314814814814814814814814814815%;
+  width: 100%;
+  background-color: $light-blue;
+  padding: 1.9% 40px 20px 40px;
+}
+
+.search-section {
   height: 32.314814814814814814814814814815%;
   width: 100%;
   background-color: $light-blue;
   padding: 1.9% 20px 20px 20px;
+}
+
+.atelier {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  .table-container {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  button {
+    cursor: pointer;
+    background-color: #88e2fd;
+    border: 1px solid #6db1ff;
+    font-size: 1rem;
+    font-family: Inter, sans-serif;
+    padding: 3px 20px;
+    border-radius: 15px;
+    width: max-content;
+  }
+  button:hover {
+    background-color: #88ccfd;
+  }
+
+  h2 {
+    font-family: Dosis, sans-serif;
+    font-weight: lighter;
+    font-size: 2rem;
+    height: 15%;
+  }
+
+  .workshop {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  table {
+    border-collapse: collapse;
+    height: max-content;
+
+    tr {
+      border: none;
+      height: 40px;
+
+        th {
+          font-family: Inter, sans-serif;
+          font-size: 1.5rem;
+          font-weight: normal;
+          text-align: left;
+        }
+
+        th, td {
+          border-right: solid 1px white;
+          text-align: left;
+        }
+
+        th:last-child, td:last-child {
+          border-right: none;
+        }
+
+        td {
+          width: max-content;
+          font-size: 1rem;
+          font-family: Inter, sans-serif;
+          font-weight: normal;
+        }
+
+        td:last-child {
+          padding-left: 20px;
+        }
+        td:first-child {
+          padding-right: 20px;
+        }
+      th {
+        border: none;
+      }
+    }
+  }
 }
 
 .dashboard, .search-result {
@@ -256,6 +349,76 @@ header {
   height: 287px;
   background-color: white;
   border-radius: 10px;
+}
+
+.informations {
+  padding: 20px;
+  display: flex;
+
+  h2 {
+    font-family: Dosis, sans-serif;
+    font-weight: lighter;
+    font-size: 2rem;
+    height: 20%;
+  }
+  p {
+    font-size: 1.25rem;
+    font-family: Inter, sans-serif;
+    margin: 0;
+  }
+
+  .display-informations {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+  }
+
+  .today-chart {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .shop-stats {
+    height: 100%;
+    width: 60%;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+
+    thead th {
+      font-size: 1rem;
+      font-family: Inter, sans-serif;
+      font-weight: normal;
+      text-align: center;
+    }
+
+    td {
+      font-size: 1.5rem;
+      font-family: Inter, sans-serif;
+      font-weight: normal;
+      text-align: center;
+    }
+
+    td:first-child {
+      padding-right: 7%;
+      text-align: right;
+    }
+
+    td:nth-child(2) {
+      background-color: $light-grey;
+      border-radius: 10px 0 0 10px;
+      width: 25%;
+    }
+
+    td:last-child {
+      background-color: $light-grey;
+      border-radius: 0 10px 10px 0;
+      width: 25%;
+    }
+  }
 }
 
 .tiles-container {
@@ -308,18 +471,162 @@ header {
 .appointment {
   height: 287px;
   width: 287px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: auto;
-  gap: 20px;
-  background-color: #212738;
+  background-color: white;
   border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    font-family: Dosis, sans-serif;
+    font-weight: lighter;
+    font-size: 2rem;
+    margin-bottom: 8%;
+  }
+  p {
+    font-size: 1.25rem;
+    font-family: Inter, sans-serif;
+    margin: 0;
+  }
+}
+
+.manage-stock {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  h2 {
+    font-family: Dosis, sans-serif;
+    font-weight: lighter;
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+  p {
+    font-size: 1.25rem;
+    font-family: Inter, sans-serif;
+    margin: 0;
+  }
+
+  .stock-stats {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px 0;
+  }
+
+  .display-stock-state {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    div {
+      width: max-content;
+      background-color: $light-grey;
+      padding: 10px 20px;
+      border-radius: 10px;
+
+      p {
+        font-size: 1.5rem;
+      }
+    }
+  }
 }
 
 .booked {
+  padding: 20px;
   flex-grow: 1;
   background-color: white;
   border-radius: 10px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  h2 {
+    font-size: 2rem;
+    font-family: Dosis, sans-serif;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    font-weight: lighter;
+    text-align: center;
+  }
+
+  table {
+    width: 100%;
+    height: max-content;
+    max-height: 100%;
+    border-collapse: collapse;
+    background-color: white;
+    border-radius: 10px;
+
+    tr {
+      border: none;
+      height: 50px;
+
+      th {
+        font-size: 1.5rem;
+        font-family: Inter, sans-serif;
+        font-weight: normal;
+      }
+
+      th, td {
+        border-right: solid 1px $light-grey;
+        padding: 0 30px;
+        text-align: center;
+      }
+
+      th:last-child, td:last-child {
+        border-right: none;
+        width: 28%;
+        padding-right: 10px;
+      }
+
+      td:first-child {
+        text-align: left;
+      }
+
+      th:first-child, td:first-child {
+        padding-left: 10px;
+      }
+
+      td {
+        width: max-content;
+        font-size: 1rem;
+        font-family: Inter, sans-serif;
+        font-weight: normal;
+
+        span {
+          display: flex;
+          gap: 10px;
+          width: max-content;
+        }
+
+        .res-ready, .res-pending, .res-todo {
+          height: 17px;
+          width: 17px;
+          border-radius: 50%;
+        }
+
+        .res-ready {
+          background-color: #98EB8A;
+        }
+
+        .res-pending {
+          background-color: #FFB951;
+        }
+
+        .res-todo {
+          background-color: #FF2222;
+        }
+      }
+    }
+  }
+
 }
 
 .search-section {
@@ -398,67 +705,5 @@ header {
 
   .search-error {
     color: #ff0000;
-  }
-
-  .loading {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .lds-ellipsis {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-ellipsis div {
-    position: absolute;
-    top: 33px;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: $light-blue;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .lds-ellipsis div:nth-child(1) {
-    left: 8px;
-    animation: lds-ellipsis1 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(2) {
-    left: 8px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(3) {
-    left: 32px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(4) {
-    left: 56px;
-    animation: lds-ellipsis3 0.6s infinite;
-  }
-  @keyframes lds-ellipsis1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes lds-ellipsis3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes lds-ellipsis2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(24px, 0);
-    }
   }
 }
