--- a/app/src/assets/css/index.css
+++ b/app/src/assets/css/index.css
@@ -256,16 +256,33 @@ header nav a h3 {
   flex-direction: column;
 }
 
+.dashboard, .search-result {
+  height: 67.6851851852%;
+  width: 100%;
+  gap: 20px;
+}
+
+.dashboard, .informations, .search-result, .appointment, .manage-stock, .booked {
+  display: flex;
+  padding: 20px;
+}
+
+.informations, .appointment, .booked, .manage-stock {
+  border-radius: 10px;
+  background-color: white;
+}
+
 .atelier, .search-section {
   height: 32.3148148148%;
   width: 100%;
   background-color: #9BE7FF;
   padding: 1.9% 40px 20px 40px;
 }
-.atelier h2, .search-section h2 {
+
+.atelier h2, .search-section h2, .informations h2 {
   height: 20%;
 }
-.atelier .workshop, .atelier .input-container, .search-section .workshop, .search-section .input-container {
+.atelier .workshop, .atelier .input-container, .search-section .workshop, .search-section .input-container, .informations .workshop, .informations .input-container {
   width: 100%;
   height: 80%;
 }
@@ -341,41 +358,21 @@ header nav a h3 {
   padding-right: 20px;
 }
 
-.dashboard, .search-result {
-  height: 67.6851851852%;
-  width: 100%;
+.subcontainer, .container {
   display: flex;
-  padding: 20px;
+  width: max-content;
   gap: 20px;
 }
 
 .container {
-  width: max-content;
-  display: flex;
   flex-direction: column;
-  gap: 20px;
-}
-
-.subcontainer {
-  display: flex;
-  width: max-content;
-  gap: 20px;
 }
 
 .informations, .manage-stock {
   width: 610px;
   height: 287px;
-  background-color: white;
-  border-radius: 10px;
 }
 
-.informations {
-  padding: 20px;
-  display: flex;
-}
-.informations h2 {
-  height: 20%;
-}
 .informations p {
   font-size: 1.25rem;
 }
@@ -470,10 +467,6 @@ header nav a h3 {
 .appointment {
   height: 287px;
   width: 287px;
-  background-color: white;
-  border-radius: 10px;
-  padding: 20px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 8%;
@@ -483,8 +476,6 @@ header nav a h3 {
 }
 
 .manage-stock {
-  padding: 20px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
@@ -515,12 +506,8 @@ header nav a h3 {
 }
 
 .booked {
-  padding: 20px;
   flex-grow: 1;
-  background-color: white;
-  border-radius: 10px;
   overflow-y: auto;
-  display: flex;
   flex-direction: column;
   gap: 20px;
 }
