--- a/app/src/assets/css/index.css
+++ b/app/src/assets/css/index.css
@@ -568,6 +568,7 @@ header nav a h3 {
   height: 44px;
 }
 .search-section .search-field label {
+  text-transform: uppercase;
   height: 100%;
   background-color: #F0F3F5;
   display: flex;
@@ -576,6 +577,7 @@ header nav a h3 {
   border-radius: 10px 0 0 10px;
 }
 .search-section .search-field input {
+  text-transform: uppercase;
   outline: none;
   border: none;
   padding: 0 15px;
