--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -592,6 +592,7 @@ header {
     height: 44px;
 
     label {
+      text-transform: uppercase;
       height: 100%;
       background-color: $light-grey;
       display: flex;
@@ -601,6 +602,7 @@ header {
     }
 
     input {
+      text-transform: uppercase;
       outline: none;
       border: none;
       padding: 0 15px;
