--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -69,186 +69,58 @@ $padding-20: 20px;
   }
 
   header {
+    background-color: $dark-blue;
     height: 100vh;
-    width: 19.583333333333333333333333333333%;
-    display: block;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 
     .user-info {
-      height: max-content;
-      padding: 0 20px;
-      margin-top: $viewport-top-margin;
+      display: flex;
+      gap: 20px;
+      height: 90px;
 
       .mobile-user-bg {
-        padding: 0;
+        padding: 0 5px 0 5px;
         height: 100%;
-        display: block;
-        align-items: normal;
-        background-color: inherit;
-        border-radius: 0;
-        width: auto;
+        display: flex;
+        align-items: center;
+        background-color: $light-grey;
+        border-radius: 0 10vh 10vh 0;
+        width: min-content;
       }
 
       svg {
-        height: 99px;
-        width: 99px;
-        color: white;
+        height: 9vh;
+        width: 9vh;
+        color: black;
       }
 
       .display-user {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        div {
-          display: flex;
-          flex-direction: column;
-          gap: 15px;
-
-          h2 {
-            letter-spacing: 1px;
-            color: white;
-            margin: -7px 0;
-          }
-
-          .retail-location {
-            flex-direction: row;
-            position: relative;
-
-            p {
-              color: white;
-            }
-
-            button {
-              display: flex;
-              align-items: center;
-              gap: 15px;
-              padding: 0;
-              margin: 0;
-              background-color: transparent;
-              border: none;
-
-              svg {
-                cursor: pointer;
-                height: 12px;
-                width: 12px;
-              }
-            }
-
-            ul {
-              top: 20px;
-              left: -10px;
-              position: absolute;
-              margin: 0;
-              padding: 0;
-              list-style-type: none;
-              background-color: $pd-blue;
-              display: flex;
-              flex-direction: column;
-              justify-content: space-around;
-
-              li {
-                height: 30px;
-                width: 100%;
-                display: flex;
-                align-items: center;
-
-                p {
-                  height: 100%;
-                  width: 100%;
-                  padding: 5px 10px;
-                }
-              }
-
-              .active-option {
-                background-color: #FF8811;
-              }
-            }
-          }
-        }
-
-        .settings {
-          flex-direction: row;
-          gap: 20px;
-
-          svg {
-            cursor: pointer;
-            height: 19px;
-            width: 19px;
-            color: $orange;
-          }
-        }
+        display: none;
       }
     }
 
     nav {
-      margin-top: 86px;
-      width: auto;
+      flex: 1;
+      width: 100%;
 
       ul {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        align-items: initial;
-        justify-items: initial;
-
-        h3 {
-          display: block;
-        }
-
-        .menu-selected {
-          background-color: $light-blue;
-
-          svg {
-            color: $dark-blue;
-          }
-
-          h3 {
-            color: $dark-blue;
-          }
-        }
-
-        a:not(.menu-selected):hover {
-          svg {
-            transition: color 0.2s ease-in-out;
-            color: $light-blue;
-          }
-
-          h3 {
-            color: $light-blue;
-            transition: color 0.2s ease-in-out;
-          }
-        }
-
-        a {
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          justify-content: initial;
-          gap: 20px;
-          height: 50px;
-          width: 100%;
-          padding-left: 25%;
-
-          svg {
-            transition: color 0.2s ease-in-out;
-            color: white;
-            height: 20px;
-            width: 20px;
-          }
-
-          h3 {
-            transition: color 0.2s ease-in-out;
-            color: white;
-            font-weight: normal;
-            font-family: Inter, sans-serif;
-            font-size: 1.25rem;
-            margin: 0;
-            padding: 0;
-          }
-        }
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        list-style-type: none;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+        align-items: center;
+        justify-items: center;
       }
     }
   }
+
 
   .main {
     height: 100vh;
