--- a/app/src/assets/css/index.scss
+++ b/app/src/assets/css/index.scss
@@ -541,3 +541,160 @@ $padding-20: 20px;
     }
   }
 }
+
+@media all and (min-width: 1100px) {
+  header {
+    height: 100vh;
+    width: 19.583333333333333333333333333333%;
+    display: block;
+    .user-info {
+      height: max-content;
+      padding: 0 20px;
+      margin-top: $viewport-top-margin;
+      .mobile-user-bg {
+        padding: 0;
+        height: 100%;
+        display: block;
+        align-items: normal;
+        background-color: inherit;
+        border-radius: 0;
+        width: auto;
+      }
+      svg {
+        height: 99px;
+        width: 99px;
+        color: white;
+      }
+      .display-user {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        div {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          h2 {
+            letter-spacing: 1px;
+            color: white;
+            margin: -7px 0;
+          }
+          .retail-location {
+            flex-direction: row;
+            position: relative;
+            p {
+              color: white;
+            }
+            button {
+              display: flex;
+              align-items: center;
+              gap: 15px;
+              padding: 0;
+              margin: 0;
+              background-color: transparent;
+              border: none;
+              svg {
+                cursor: pointer;
+                height: 12px;
+                width: 12px;
+              }
+            }
+            ul {
+              top: 20px;
+              left: -10px;
+              position: absolute;
+              margin: 0;
+              padding: 0;
+              list-style-type: none;
+              background-color: $pd-blue;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-around;
+              li {
+                height: 30px;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                p {
+                  height: 100%;
+                  width: 100%;
+                  padding: 5px 10px;
+                }
+              }
+              .active-option {
+                background-color: #FF8811;
+              }
+            }
+          }
+        }
+        .settings {
+          flex-direction: row;
+          gap: 20px;
+          svg {
+            cursor: pointer;
+            height: 19px;
+            width: 19px;
+            color: $orange;
+          }
+        }
+      }
+    }
+    nav {
+      margin-top: 86px;
+      width: auto;
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        align-items: initial;
+        justify-items: initial;
+        h3 {
+          display: block;
+        }
+        .menu-selected {
+          background-color: $light-blue;
+          svg {
+            color: $dark-blue;
+          }
+          h3 {
+            color: $dark-blue;
+          }
+        }
+        a:not(.menu-selected):hover {
+          svg {
+            transition: color 0.2s ease-in-out;
+            color: $light-blue;
+          }
+          h3 {
+            color: $light-blue;
+            transition: color 0.2s ease-in-out;
+          }
+        }
+        a {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: initial;
+          gap: 20px;
+          height: 50px;
+          width: 100%;
+          padding-left: 25%;
+          svg {
+            transition: color 0.2s ease-in-out;
+            color: white;
+            height: 20px;
+            width: 20px;
+          }
+          h3 {
+            transition: color 0.2s ease-in-out;
+            color: white;
+            font-weight: normal;
+            font-family: Inter, sans-serif;
+            font-size: 1.25rem;
+            margin: 0;
+            padding: 0;
+          }
+        }
+      }
+    }
+  }
+}
